<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SplashActivity!</string>
    <string name="app_name">漫画看看</string>
    <string name="app_name_cn">漫画看看</string>
    <string name="app_ver">Version 1.3</string>
    <string name="app_mail">oodooo@gmail.com</string>
    <string name="app_site">http://www.xiaoxiaotu.com/apps</string>
    <string name="app_sp">技术支持</string>
    <string name="app_offical">官方网站</string>
    <string name="menu1">确定</string>
    <string name="menu2">取消</string>
    <string name="menu3">删除</string>
    <string name="menu4">整理</string>
    <string name="menu5">帮助</string>
    <string name="menu6">关于</string>
    <string name="menu7">参数</string>
    <string name="menu8">退出</string>
    <string name="menu9">上一箱</string>
    <string name="menu10">下一箱</string>
    <string name="menu11">书签</string>
    <string name="menu12">添加</string>
    <string name="menu13">分类</string>
    <string name="menu14">关闭</string>
    <string name="menu15">保存本页为书签</string>
    <string name="menu16">设置本页为书的封面</string>
    <string name="menu17">返回书架</string>
    <string name="menu18">保存</string>
    <string name="menu19">重命名</string>
    <string name="menu20">改路径</string>
    <string name="menu21">改封面</string>
    <string name="menu22">删除</string>
    <string name="menu23">返回</string>
    <string name="menu24">添加漫画</string>
    <string name="menu25">分类管理</string>
    <string name="menu26">添加分类</string>
    <string name="ui0">加载中，请稍等 ...</string>
    <string name="ui1">继续观看</string>
    <string name="ui2">真的要退出啊，不看了吗？</string>
    <string name="ui3">全部分类</string>
    <string name="ui4">暂时没有漫画书，赶快添加几本吧</string>
    <string name="ui5">已经是第一箱了</string>
    <string name="ui6">已经是最后一箱了</string>
    <string name="ui7">已经是第一张图了</string>
    <string name="ui8">已经是最后一张图了</string>
    <string name="ui9">操作成功，你太厉害了</string>
    <string name="ui10">文件夹不存在，可能改名字了，或者更改过SD卡。单击\"取消\"按钮返回书架。</string>
    <string name="ui11">该文件夹下没有图片文件，请重新指定漫画文件夹路径。单击\"取消\"按钮返回书架。</string>
    <string name="ui12">+++ 1. 漫画书名 +++</string>
    <string name="ui15">+++ 2. 指定路径 +++</string>
    <string name="ui16">+++ 3. 封面图片 +++</string>
    <string name="ui17">操作提示：单击数字序号和文字标题即可输入或者选择</string>
    <string name="ui18">返回上级目录</string>
    <string name="ui19">您还没有选择封面图片呢，尺寸太大的不可以哦！</string>
    <string name="ui20">书名，路径，分类，都必须指定，不能为空</string>
    <string name="ui21">+++ 4. 存放分类 +++</string>
    <string name="ui22">添加新漫画成功了！重新输入或选择即可继续添加！</string>
    <string name="ui23">给漫画书换个新名字</string>
    <string name="ui24">请输入漫画书新的名字，我不会检查这个名字是否重复哦！可以采取第X话第Y卷这种形式。</string>
    <string name="ui25">好棒耶，更改漫画书名字成功了！</string>
    <string name="ui26">请先选择某一行，在该行上手指点击一下即可！</string>
    <string name="ui27">好棒耶，更改漫画书封面成功了！</string>
    <string name="ui28">指定新的漫画书路径成功了！</string>
    <string name="ui29">确定要删除这个书签吗？</string>
    <string name="ui30">确定要删除这本漫画书吗？本操作不会物理删除SD卡上的图片及文件夹。</string>
    <string name="ui31">删掉了一本漫画书，哎，又少了一本！</string>
    <string name="ui32">真的要删除这个漫画分类吗？请先确保该分类下没有漫画书存在！否则将无法删除！</string>
    <string name="ui33">输入新分类的名字，我不会告诉你名字是否重复哦！</string>
    <string name="ui34">我比较懒，这个功能就不实现了吧~</string>
    <string name="ui35">本版本暂无此功能，敬请关注XXT Studio（小小兔工作室）动态！</string>
    <string name="ui36">这个分类\"全部分类\"，是不能被删除嘀~~</string>
</resources>
