<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/window_bg" android:layout_width="390.0dip" android:layout_height="520.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/app_name" />
    <TextView android:textSize="30.0dip" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_gravity="center" android:layout_width="300.0dip" android:layout_height="50.0dip" android:text="@string/app_name_cn" />
    <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="300.0dip" android:layout_height="26.0dip" android:text="@string/app_ver" />
    <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center_horizontal" android:autoLink="email" android:layout_gravity="center_horizontal" android:layout_width="300.0dip" android:layout_height="24.0dip" android:layout_marginTop="100.0dip" android:text="@string/app_sp" />
    <TextView android:textSize="18.0dip" android:textColor="@color/blue" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="300.0dip" android:layout_height="24.0dip" android:text="@string/app_mail" />
    <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="300.0dip" android:layout_height="24.0dip" android:text="@string/app_offical" />
    <TextView android:textSize="18.0dip" android:gravity="center_horizontal" android:autoLink="web" android:layout_gravity="center_horizontal" android:layout_width="300.0dip" android:layout_height="24.0dip" android:text="@string/app_site" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/about_back" android:layout_width="110.0dip" android:layout_height="wrap_content" android:layout_marginTop="150.0dip" android:text="@string/menu17" />
</LinearLayout>