<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_bg" android:layout_width="290.0dip" android:layout_height="450.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/view_dialog_addtag" android:layout_width="200.0dip" android:layout_height="50.0dip" android:layout_marginLeft="50.0dip" android:layout_marginTop="120.0dip" android:text="@string/menu15" />
    <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/view_dialog_asface" android:layout_width="200.0dip" android:layout_height="50.0dip" android:layout_marginLeft="50.0dip" android:text="@string/menu16" />
    <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/view_dialog_backmain" android:layout_width="200.0dip" android:layout_height="50.0dip" android:layout_marginLeft="50.0dip" android:text="@string/menu17" />
    <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/view_dialog_close" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginLeft="160.0dip" android:layout_marginTop="110.0dip" android:text="@string/menu14" />
</LinearLayout>