<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/master_lay" android:background="@drawable/master3" android:layout_width="480.0dip" android:layout_height="800.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:umadsdk="http://schemas.android.com/apk/res/com.comiccc">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="52.0dip">
        <net.youmi.android.AdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" umadsdk:startbackgroundColor="#ff2b2b2b" umadsdk:endbackgroundColor="#ff63b8ff" umadsdk:clickBackgroundColor="#ff1e90ff" umadsdk:textColor="#ff0fff22" umadsdk:backgroundTransparent="155" />
    </LinearLayout>
    <TextView android:textSize="14.0dip" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/main_txt_yugao" android:layout_width="130.0dip" android:layout_height="34.0dip" android:layout_marginLeft="290.0dip" android:text="@string/ui1" android:maxLines="2" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/main_lay_bot" android:layout_width="480.0dip" android:layout_height="30.0dip" android:layout_marginTop="40.0dip">
        <TextView android:textSize="18.0dip" android:textColor="@color/black" android:id="@id/btn_prior" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/menu9" />
        <TextView android:textSize="18.0dip" android:textColor="@color/black" android:id="@id/btn_next" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/menu10" />
        <TextView android:textSize="18.0dip" android:textColor="@color/black" android:id="@id/btn_add" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/menu12" />
        <TextView android:textSize="18.0dip" android:textColor="@color/black" android:id="@id/btn_class" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/menu13" />
        <TextView android:textSize="18.0dip" android:textColor="@color/black" android:id="@id/btn_bookmark" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/menu11" />
    </LinearLayout>
    <LinearLayout android:id="@id/main_canvas_lay" android:layout_width="480.0dip" android:layout_height="640.0dip" android:layout_marginTop="12.0dip">
        <ImageView android:id="@id/master_shelf" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>