<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="480.0dip" android:layout_height="800.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:background="@drawable/add_comic_top" android:layout_width="480.0dip" android:layout_height="75.0dip" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/other_bg" android:layout_width="480.0dip" android:layout_height="725.0dip">
        <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/add_comic_step1" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="60.0dip" android:text="@string/ui12" />
        <EditText android:textColor="@color/white" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/add_comic_name" android:background="@drawable/line" android:layout_width="360.0dip" android:layout_height="wrap_content" android:maxLines="1" />
        <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/add_comic_step2" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/ui15" />
        <TextView android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/add_comic_step2_content" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="" />
        <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/add_comic_step3" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/ui16" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/add_comic_preview" android:background="@drawable/preview" android:layout_width="60.0dip" android:layout_height="70.0dip" />
        <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/add_comic_class" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/ui21" />
        <Spinner android:layout_gravity="center_horizontal" android:id="@id/add_select_spinner" android:layout_width="200.0dip" android:layout_height="40.0dip" />
        <TextView android:textSize="14.0dip" android:textColor="@color/red" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/add_comic_error" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="120.0dip" android:text="" />
        <TextView android:textSize="13.0dip" android:textColor="@color/black" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/ui17" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/add_comic_save" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="@string/menu18" />
            <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/add_comic_close" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="@string/menu14" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>