<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="480.0dip" android:layout_height="800.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/tidy_comic_top" android:layout_width="480.0dip" android:layout_height="90.0dip" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/other_bg" android:layout_width="480.0dip" android:layout_height="710.0dip">
        <ListView android:id="@id/mang_mark_list" android:layout_width="420.0dip" android:layout_height="260.0dip" android:layout_marginLeft="30.0dip" android:cacheColorHint="#00000000" />
        <ImageView android:background="@drawable/line" android:layout_width="420.0dip" android:layout_height="10.0dip" android:layout_marginLeft="30.0dip" />
        <ListView android:id="@id/mang_books_list" android:layout_width="420.0dip" android:layout_height="360.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:cacheColorHint="#00000000" />
        <ImageView android:background="@drawable/line" android:layout_width="420.0dip" android:layout_height="10.0dip" android:layout_marginLeft="30.0dip" />
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="480.0dip" android:layout_height="wrap_content">
            <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/mang_classmang" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="@string/menu25" />
            <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/mang_addbook" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="@string/menu24" />
            <TextView android:textSize="24.0dip" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/mang_back" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="@string/menu17" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>